fix: wrap containers

--- a/frontend/src/app/modules/apresentacao/components/configuracao-apresentacao/configuracao-apresentacao.component.scss
+++ b/frontend/src/app/modules/apresentacao/components/configuracao-apresentacao/configuracao-apresentacao.component.scss
@@ -3,8 +3,10 @@
   margin-top: 2vh;
 
   .row {
-    flex-wrap: wrap-reverse;
-    height: 100%;
+    &.container-smk{
+      flex-wrap: wrap-reverse;
+      height: 100%;
+    }
   }
 
   .portlet {
